# naaf-research-agents

./: .gitignore  CLAUDE.md  README.md  cloudbuild.yaml
NAAF-Research-Agents/: README.md  architecture.md  assessment-framework.md  requirements.txt
NAAF-Research-Agents/study/: README.md
NAAF-Research-Agents/webapp/: tailwind.config.ts
apps/api/: requirements.txt
apps/web/: package.json
backend/: .dockerignore  .gcloudignore  Dockerfile  Makefile  README.md  __init__.py  deploy.sh  pyproject.toml  requirements.txt  run.py  run_adk.py
backend/agents/: __init__.py
backend/agents/naaf_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/agents/naaf_multi/: __init__.py  app.py  layer_agents.py  supervisor.py  tools.py
backend/api/: __init__.py  app.py
backend/data/research_runs/: index.json  naaf_singapore_20260206_231929.json  naaf_singapore_20260206_231944.json
backend/framework/: __init__.py  naaf_framework.py  research_store.py
backend/tools/: __init__.py  exa_search.py  youcom_news.py  youcom_search.py
docs/: ADK_MIGRATION_PLAN.md  HACKATHON_PLAN.md  INTEGRATION_STATUS.md  LIVE_NEWS_FEATURE.md  MULTI_AGENT_ARCHITECTURE.md
docs/ai/: 0_AI_PROFILE.md  1_AGENT_PROMPTS.md
docs/engineering/: 0_ENGINEERING_PROFILE.md  1_ADK_AGENT_SETUP.md
docs/partners/: README.md
docs/product/: 0_PRODUCT_PROFILE.md
hackathon-submission/: Project-Details.md
infra/: docker-compose.yml
skills/: README.md  backend-fastapi.md  data-postgres-redis.md  demo-pitch.md  frontend-copilot-ui.md
web/: index.html  tailwind.config.ts
web/src/: App.tsx  (+1 more)
(+96 files in other folders)
